2012-01-13 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-assistant-export.ui: Rename widget to ExportAskLabel.

	* src/nact/nact-export-ask.c:
	* src/nact/nact-export-ask.h:
	Rename NACT_EXPORT_ASK_TYPE GType macro to NACT_TYPE_EXPORT_ASK.

	* src/utils/nautilus-actions-new.c (output_to_stdout): Set default value.

	* src/core/na-ioptions-list.h: Fix GType macros.

	* src/core/na-settings.c:
	* src/core/na-settings.h: Move default values out of the header.

	* src/core/na-exporter.c (na_exporter_get_export_format): Fix comment.

2012-01-12 Pierre Wieser <pwieser@trychlos.org>

	* src/core/na-ioptions-list.h:
	Rename NA_IOPTIONS_LIST_TYPE GType macro to NA_TYPE_IOPTIONS_LIST.

	* src/core/na-importer-ask.c (register_type):
	* src/nact/nact-assistant-export.c (register_type):
	* src/nact/nact-assistant-import.c (register_type):
	* src/nact/nact-preferences-editor.c (register_type): Updated accordingly.

	* src/nact/nact-preferences-editor.c:
	* src/nact/nact-preferences-editor.h:
	* src/nact/nact-preferences.ui:
	Rename NACT_PREFERENCES_EDITOR_TYPE GType macro to NACT_TYPE_PREFERENCES_EDITOR.
	Set "Relying on runtime detection" as default in "Runtime execution" tab.
	Display the detected desktop identifier.

	* src/nact/nact-ienvironment-tab.c
	(dispose_selection_count_combobox): Check that we have a GtkComboBox.
	(dispose_desktop_listview): Check that we have a GtkTreeView.

	* src/nact/nact-icommand-tab.c
	(legend_dialog_hide): Check that legend_dialog is a GtkWindow.

	* src/core/na-desktop-environment.c:
	* src/core/na-desktop-environment.h: Fix comments.

	General review of notebook interfaces:
	- connect to BaseWindow signals instead of calling public functions
	- define GObject standard GType macro names
	- host private data in only one structure attached to the instance.

	* src/nact/nact-iaction-tab.c:
	* src/nact/nact-iaction-tab.h:
	* src/nact/nact-ibasenames-tab.c:
	* src/nact/nact-ibasenames-tab.h:
	* src/nact/nact-icapabilities-tab.c: