@@ -1,5 +1,10 @@
 2012-01-13 Pierre Wieser <pwieser@trychlos.org>
 
+	* src/core/na-ioption.h:
+	* src/core/na-import-mode.c:
+	* src/core/na-export-format.c:
+	Rename NA_IOPTION_TYPE GType macro to NA_TYPE_IOPTION.
+
 	* src/nact/nact-assistant-export.ui: Rename widget to ExportAskLabel.
 
 	* src/nact/nact-export-ask.c:
